Add GitHub images guide and update profile photo to use GitHub URL

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="profile-dashboard">
                         <div class="profile-header">
                             <div class="profile-image">
-                                <img src="profile-photo.jpg" alt="Santosh Sirikonda" id="profileImg">
+                                <img src="https://raw.githubusercontent.com/santoshsirikonda/santosh-portfolio/main/profile-photo.jpg" alt="Santosh Sirikonda" id="profileImg">
                                 <div class="image-placeholder">
                                     <i class="fas fa-user"></i>
                                 </div>
