--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <span class="brand-icon">🚀</span>
+                <span class="brand-icon"><i class="fas fa-rocket"></i></span>
                 <span class="brand-text">Santosh</span>
             </div>
             <ul class="nav-menu">
@@ -41,7 +41,7 @@
             <div class="hero-grid">
                 <div class="hero-content">
                     <div class="hero-badge">
-                        <span class="badge-icon">🚀</span>
+                        <span class="badge-icon"><i class="fas fa-rocket"></i></span>
                         <span>Available for opportunities</span>
                     </div>
                     <h1 class="hero-title">
@@ -215,22 +215,22 @@
                     </div>
                     <div class="summary-metrics">
                         <div class="metric-card">
-                            <div class="metric-icon">📈</div>
+                            <div class="metric-icon"><i class="fas fa-chart-line"></i></div>
                             <div class="metric-value">7+</div>
                             <div class="metric-label">Years Experience</div>
                         </div>
                         <div class="metric-card">
-                            <div class="metric-icon">🚀</div>
+                            <div class="metric-icon"><i class="fas fa-rocket"></i></div>
                             <div class="metric-value">50+</div>
                             <div class="metric-label">Projects Delivered</div>
                         </div>
                         <div class="metric-card">
-                            <div class="metric-icon">🧠</div>
+                            <div class="metric-icon"><i class="fas fa-brain"></i></div>
                             <div class="metric-value">15+</div>
                             <div class="metric-label">ML Models Deployed</div>
                         </div>
                         <div class="metric-card">
-                            <div class="metric-icon">⚡</div>
+                            <div class="metric-icon"><i class="fas fa-bolt"></i></div>
                             <div class="metric-value">5+</div>
                             <div class="metric-label">Tech Domains</div>
                         </div>
@@ -246,7 +246,7 @@
                         <!-- Current Position -->
                         <div class="position-card current-position">
                             <div class="position-header">
-                                <div class="position-icon">🚗</div>
+                                <div class="position-icon"><i class="fas fa-car"></i></div>
                                 <div class="position-info">
                                     <h4 class="position-title">AI/ML Engineer</h4>
                                     <p class="company-name">Mercedes-Benz Financial Services</p>
@@ -356,7 +356,7 @@
 
                         <div class="position-card">
                             <div class="position-header">
-                                <div class="position-icon">🔧</div>
+                                <div class="position-icon"><i class="fas fa-tools"></i></div>
                                 <div class="position-info">
                                     <h4 class="position-title">Software Developer</h4>
                                     <p class="company-name">Tech Mahindra</p>
@@ -401,7 +401,7 @@
 
                         <div class="position-card">
                             <div class="position-header">
-                                <div class="position-icon">⚙️</div>
+                                <div class="position-icon"><i class="fas fa-cog"></i></div>
                                 <div class="position-info">
                                     <h4 class="position-title">Software Developer</h4>
                                     <p class="company-name">Valuelabs</p>
@@ -461,7 +461,7 @@
                     <!-- Skill Categories Grid -->
                     <div class="skills-categories-compact">
                         <div class="skill-category-compact ai-ml" data-category="ai-ml">
-                            <div class="category-icon">🧠</div>
+                            <div class="category-icon"><i class="fas fa-brain"></i></div>
                             <div class="category-name">AI/ML</div>
                             <div class="category-techs">
                                 <span>Python</span>
@@ -472,7 +472,7 @@
                         </div>
 
                         <div class="skill-category-compact fullstack" data-category="fullstack">
-                            <div class="category-icon">💻</div>
+                            <div class="category-icon"><i class="fas fa-laptop-code"></i></div>
                             <div class="category-name">Full Stack</div>
                             <div class="category-techs">
                                 <span>React</span>
@@ -483,7 +483,7 @@
                         </div>
 
                         <div class="skill-category-compact data" data-category="data">
-                            <div class="category-icon">📊</div>
+                            <div class="category-icon"><i class="fas fa-chart-bar"></i></div>
                             <div class="category-name">Data</div>
                             <div class="category-techs">
                                 <span>Spark</span>
@@ -494,7 +494,7 @@
                         </div>
 
                         <div class="skill-category-compact cloud" data-category="cloud">
-                            <div class="category-icon">☁️</div>
+                            <div class="category-icon"><i class="fas fa-cloud"></i></div>
                             <div class="category-name">Cloud</div>
                             <div class="category-techs">
                                 <span>AWS</span>
@@ -505,7 +505,7 @@
                         </div>
 
                         <div class="skill-category-compact mlops" data-category="mlops">
-                            <div class="category-icon">🚀</div>
+                            <div class="category-icon"><i class="fas fa-cogs"></i></div>
                             <div class="category-name">MLOps</div>
                             <div class="category-techs">
                                 <span>Docker</span>
@@ -516,7 +516,7 @@
                         </div>
 
                         <div class="skill-category-compact analytics" data-category="analytics">
-                            <div class="category-icon">📈</div>
+                            <div class="category-icon"><i class="fas fa-chart-line"></i></div>
                             <div class="category-name">Analytics</div>
                             <div class="category-techs">
                                 <span>Power BI</span>
@@ -542,7 +542,7 @@
             <div class="compact-projects-grid">
                 <div class="project-card-compact ai-ml-project" data-project="ai-ml">
                     <div class="project-header-compact">
-                        <div class="project-icon">🧠</div>
+                        <div class="project-icon"><i class="fas fa-brain"></i></div>
                         <div class="project-badge">AI/ML</div>
                     </div>
                     <div class="project-content-compact">
@@ -568,7 +568,7 @@
 
                 <div class="project-card-compact cv-project" data-project="computer-vision">
                     <div class="project-header-compact">
-                        <div class="project-icon">👁️</div>
+                        <div class="project-icon"><i class="fas fa-eye"></i></div>
                         <div class="project-badge">Computer Vision</div>
                     </div>
                     <div class="project-content-compact">
@@ -594,7 +594,7 @@
 
                 <div class="project-card-compact data-project" data-project="data-engineering">
                     <div class="project-header-compact">
-                        <div class="project-icon">📊</div>
+                        <div class="project-icon"><i class="fas fa-database"></i></div>
                         <div class="project-badge">Data Engineering</div>
                     </div>
                     <div class="project-content-compact">
@@ -620,7 +620,7 @@
 
                 <div class="project-card-compact nlp-project" data-project="nlp">
                     <div class="project-header-compact">
-                        <div class="project-icon">💬</div>
+                        <div class="project-icon"><i class="fas fa-comments"></i></div>
                         <div class="project-badge">NLP</div>
                     </div>
                     <div class="project-content-compact">
