--- a/index.html
+++ b/index.html
@@ -92,9 +92,6 @@
                         <div class="profile-header">
                             <div class="profile-image">
                                 <img src="https://raw.githubusercontent.com/santoshsirikonda/santosh-portfolio/main/profile-photo.jpg" alt="Santosh Sirikonda" id="profileImg">
-                                <div class="image-placeholder">
-                                    <i class="fas fa-user"></i>
-                                </div>
                                 <div class="avatar-ring"></div>
                             </div>
                             <div class="profile-info">
@@ -215,24 +212,24 @@
                     </div>
                     <div class="summary-metrics">
                         <div class="metric-card">
-                            <div class="metric-icon"><i class="fas fa-chart-line"></i></div>
+                            <div class="metric-icon"><i class="fas fa-calendar-alt"></i></div>
                             <div class="metric-value">7+</div>
                             <div class="metric-label">Years Experience</div>
                         </div>
                         <div class="metric-card">
+                            <div class="metric-icon"><i class="fas fa-building"></i></div>
+                            <div class="metric-value">3</div>
+                            <div class="metric-label">Companies</div>
+                        </div>
+                        <div class="metric-card">
                             <div class="metric-icon"><i class="fas fa-rocket"></i></div>
-                            <div class="metric-value">50+</div>
+                            <div class="metric-value">15+</div>
                             <div class="metric-label">Projects Delivered</div>
                         </div>
                         <div class="metric-card">
-                            <div class="metric-icon"><i class="fas fa-brain"></i></div>
-                            <div class="metric-value">15+</div>
-                            <div class="metric-label">ML Models Deployed</div>
-                        </div>
-                        <div class="metric-card">
-                            <div class="metric-icon"><i class="fas fa-bolt"></i></div>
-                            <div class="metric-value">5+</div>
-                            <div class="metric-label">Tech Domains</div>
+                            <div class="metric-icon"><i class="fas fa-chart-line"></i></div>
+                            <div class="metric-value">60%</div>
+                            <div class="metric-label">Avg. Performance Improvement</div>
                         </div>
                     </div>
                 </div>
@@ -246,7 +243,7 @@
                         <!-- Current Position -->
                         <div class="position-card current-position">
                             <div class="position-header">
-                                <div class="position-icon"><i class="fas fa-car"></i></div>
+                                <div class="position-icon"><i class="fas fa-briefcase"></i></div>
                                 <div class="position-info">
                                     <h4 class="position-title">AI/ML Engineer</h4>
                                     <p class="company-name">Mercedes-Benz Financial Services</p>
@@ -311,7 +308,7 @@
                         <!-- Previous Positions -->
                         <div class="position-card">
                             <div class="position-header">
-                                <div class="position-icon">🏛️</div>
+                                <div class="position-icon"><i class="fas fa-briefcase"></i></div>
                                 <div class="position-info">
                                     <h4 class="position-title">AI/ML Engineer (Researcher)</h4>
                                     <p class="company-name">State of New York</p>
@@ -356,7 +353,7 @@
 
                         <div class="position-card">
                             <div class="position-header">
-                                <div class="position-icon"><i class="fas fa-tools"></i></div>
+                                <div class="position-icon"><i class="fas fa-briefcase"></i></div>
                                 <div class="position-info">
                                     <h4 class="position-title">Software Developer</h4>
                                     <p class="company-name">Tech Mahindra</p>
@@ -401,7 +398,7 @@
 
                         <div class="position-card">
                             <div class="position-header">
-                                <div class="position-icon"><i class="fas fa-cog"></i></div>
+                                <div class="position-icon"><i class="fas fa-briefcase"></i></div>
                                 <div class="position-info">
                                     <h4 class="position-title">Software Developer</h4>
                                     <p class="company-name">Valuelabs</p>
