Enhance Professional Skills Map with comprehensive technical content
✨ Comprehensive Skills Enhancement:

🎯 Enhanced Existing Categories:
- AI/ML: Added scikit-learn, Keras, OpenCV, BERT, Transformers, CrewAI, Vertex AI, AutoML (12 technologies)
- Full Stack: Added Next.js, Vue.js, Express, Django, FastAPI, Flask, Spring Boot, AngularJS (12 technologies)
- Data Engineering: Renamed and added Apache Airflow, ETL Pipelines, Data Warehousing, Hadoop, Databricks, Apache Beam, BigQuery (12 technologies)
- Cloud & Infrastructure: Renamed and added SageMaker, Lambda, EC2, S3, Terraform, CloudFormation, DataProc, Pub/Sub (12 technologies)
- MLOps & CI/CD: Renamed and added Kubeflow, GitHub Actions, GitLab CI, Azure DevOps, Cloud Build, TFX, Model Registry, Feature Store (12 technologies)
- Analytics & Visualization: Renamed and added Google Data Studio, Streamlit, Dash, Plotly, Matplotlib, Seaborn, Elasticsearch, Kibana (12 technologies)

🚀 Added New Skill Categories:
- Databases & Storage: PostgreSQL, MongoDB, Redis, MySQL, Elasticsearch, DynamoDB, Cassandra, Pinecone, Chroma, Snowflake, Vector DBs, Time Series DB (12 technologies)
- Programming Languages: Python, Java, JavaScript, TypeScript, R, Scala, SQL, Go, Shell/Bash, C++, HTML5, CSS3 (12 languages)
- Development Tools: Git, GitHub, GitLab, Jupyter, VS Code, PyCharm, IntelliJ, Postman, Swagger, Docker Compose, Kubernetes, Helm (12 tools)

🎨 Professional Styling:
- Each new category has unique color-coded borders and hover effects
- Databases: Green accent with matching glow effects
- Languages: Purple accent with professional styling
- Tools: Orange accent with smooth animations
- Maintained consistent glass-morphism design across all categories

🎯 Key Benefits:
- Comprehensive technical skill coverage (108 total technologies)
- Professional categorization with clear domain separation
- Enhanced visual appeal with color-coded categories
- Better representation of full-stack AI/ML expertise
- Improved professional cre

--- a/index.html
+++ b/index.html
@@ -504,6 +504,14 @@
                                 <span>TensorFlow</span>
                                 <span>PyTorch</span>
                                 <span>LangChain</span>
+                                <span>scikit-learn</span>
+                                <span>Keras</span>
+                                <span>OpenCV</span>
+                                <span>BERT</span>
+                                <span>Transformers</span>
+                                <span>CrewAI</span>
+                                <span>Vertex AI</span>
+                                <span>AutoML</span>
                             </div>
                         </div>
 
@@ -515,50 +523,147 @@
                                 <span>Node.js</span>
                                 <span>TypeScript</span>
                                 <span>GraphQL</span>
+                                <span>Next.js</span>
+                                <span>Vue.js</span>
+                                <span>Express</span>
+                                <span>Django</span>
+                                <span>FastAPI</span>
+                                <span>Flask</span>
+                                <span>Spring Boot</span>
+                                <span>AngularJS</span>
                             </div>
                         </div>
 
                         <div class="skill-category-compact data" data-category="data">
                             <div class="category-icon"><i class="fas fa-chart-bar"></i></div>
-                            <div class="category-name">Data</div>
+                            <div class="category-name">Data Engineering</div>
                             <div class="category-techs">
-                                <span>Spark</span>
-                                <span>Kafka</span>
+                                <span>Apache Spark</span>
+                                <span>Apache Kafka</span>
                                 <span>PostgreSQL</span>
                                 <span>MongoDB</span>
+                                <span>Apache Airflow</span>
+                                <span>ETL Pipelines</span>
+                                <span>Data Warehousing</span>
+                                <span>Hadoop</span>
+                                <span>Databricks</span>
+                                <span>dbt</span>
+                                <span>Apache Beam</span>
+                                <span>BigQuery</span>
                             </div>
                         </div>
 
                         <div class="skill-category-compact cloud" data-category="cloud">
                             <div class="category-icon"><i class="fas fa-cloud"></i></div>
-                            <div class="category-name">Cloud</div>
+                            <div class="category-name">Cloud & Infrastructure</div>
                             <div class="category-techs">
                                 <span>AWS</span>
                                 <span>GCP</span>
                                 <span>Azure</span>
-                                <span>K8s</span>
+                                <span>Kubernetes</span>
+                                <span>SageMaker</span>
+                                <span>Lambda</span>
+                                <span>EC2</span>
+                                <span>S3</span>
+                                <span>Terraform</span>
+                                <span>CloudFormation</span>
+                                <span>DataProc</span>
+                                <span>Pub/Sub</span>
                             </div>
                         </div>
 
                         <div class="skill-category-compact mlops" data-category="mlops">
                             <div class="category-icon"><i class="fas fa-cogs"></i></div>
-                            <div class="category-name">MLOps</div>
+                            <div class="category-name">MLOps & CI/CD</div>
                             <div class="category-techs">
                                 <span>Docker</span>
                                 <span>Jenkins</span>
                                 <span>MLflow</span>
-                                <span>Airflow</span>
+                                <span>Apache Airflow</span>
+                                <span>Kubeflow</span>
+                                <span>GitHub Actions</span>
+                                <span>GitLab CI</span>
+                                <span>Azure DevOps</span>
+                                <span>Cloud Build</span>
+                                <span>TFX</span>
+                                <span>Model Registry</span>
+                                <span>Feature Store</span>
                             </div>
                         </div>
 
                         <div class="skill-category-compact analytics" data-category="analytics">
                             <div class="category-icon"><i class="fas fa-chart-line"></i></div>
-                            <div class="category-name">Analytics</div>
+                            <div class="category-name">Analytics & Visualization</div>
                             <div class="category-techs">
                                 <span>Power BI</span>
                                 <span>Tableau</span>
                                 <span>Looker</span>
                                 <span>dbt</span>
+                                <span>Google Data Studio</span>
+                                <span>Streamlit</span>
+                                <span>Dash</span>
+                                <span>Plotly</span>
+                                <span>Matplotlib</span>
+                                <span>Seaborn</span>
+                                <span>Elasticsearch</span>
+                                <span>Kibana</span>
+                            </div>
+                        </div>
+
+                        <div class="skill-category-compact databases" data-category="databases">
+                            <div class="category-icon"><i class="fas fa-database"></i></div>
+                            <div class="category-name">Databases & Storage</div>
+                            <div class="category-techs">
+                                <span>PostgreSQL</span>
+                                <span>MongoDB</span>
+                                <span>Redis</span>
+                                <span>MySQL</span>
+                                <span>Elasticsearch</span>
+                                <span>DynamoDB</span>
+                                <span>Cassandra</span>
+                                <span>Pinecone</span>
+                                <span>Chroma</span>
+                                <span>Snowflake</span>
+                                <span>Vector DBs</span>
+                                <span>Time Series DB</span>
+                            </div>
+                        </div>
+
+                        <div class="skill-category-compact languages" data-category="languages">
+                            <div class="category-icon"><i class="fas fa-code"></i></div>
+                            <div class="category-name">Programming Languages</div>
+                            <div class="category-techs">
+                                <span>Python</span>
+                                <span>Java</span>
+                                <span>JavaScript</span>
+                                <span>TypeScript</span>
+                                <span>R</span>
+                                <span>Scala</span>
+                                <span>SQL</span>
+                                <span>Go</span>
+                                <span>Shell/Bash</span>
+                                <span>C++</span>
+                                <span>HTML5</span>
+                                <span>CSS3</span>
+                            </div>
+                        </div>
+
+                        <div class="skill-category-compact tools" data-category="tools">
+                            <div class="category-icon"><i class="fas fa-tools"></i></div>
+                            <div class="category-name">Development Tools</div>
+                            <div class="category-techs">
+                                <span>Git</span>
+                                <span>GitHub</span>
+                                <span>GitLab</span>
+                                <span>Jupyter</span>
+                                <span>VS Code</span>
+                                <span>PyCharm</span>
+                                <span>IntelliJ</span>
+                                <span>Postman</span>
+                                <span>Swagger</span>
+                                <span>Docker Compose</span>
+                                <span>Kubernetes</span>
+                                <span>Helm</span>
                             </div>
                         </div>
                     </div>
