Transform Career Progression to bright white styling and add comprehensive technologies
✨ Career Progression Enhancement:

🎨 Bright White Styling:
- Changed position cards from black (rgba(17, 17, 17, 0.95)) to bright white glass (rgba(255, 255, 255, 0.15))
- Updated borders from dark gray to bright white (rgba(255, 255, 255, 0.3))
- Enhanced current position card with bright green accent (rgba(16, 185, 129, 0.6))
- Updated position header borders to bright white (rgba(255, 255, 255, 0.2))
- Reduced shadow intensity for lighter, brighter appearance

🚀 Enhanced Technologies Across All Positions:

Mercedes-Benz (Current):
- AI/ML: Added scikit-learn, OpenCV, BERT, CrewAI (8 technologies)
- Cloud: Added S3, CloudFormation, IAM, VPC (8 technologies)
- Data: Added Chroma, Vector DBs, ETL Pipelines, Data Warehousing (8 technologies)
- DevOps: Added GitHub Actions, Jenkins, MLflow, Prometheus (8 technologies)

State of New York:
- AI/ML: Added LIME, GANs, K-Means, DBSCAN (8 technologies)
- Cloud: Added Vertex AI, DataProc, Pub/Sub, Cloud Storage (8 technologies)

Tech Mahindra:
- AI/ML: Added LSTM, Pandas, NumPy, Anomaly Detection (8 technologies)
- Web & Data: Added Python Faker, Feature Engineering, Model Governance, Airflow (8 technologies)

Valuelabs:
- Backend: Added RabbitMQ, Spring Security, OAuth2, SAML (8 technologies)
- Cloud & DevOps: Added Docker Compose, Blue/Green Deployment, ELK Stack, JUnit & Mockito (8 technologies)

🎯 Key Benefits:
- Bright, professional appearance with glass-morphism effect
- Comprehensive technology coverage (64 total technologies across 4 positions)
- Better visual hierarchy with bright white styling
- Enhanced professional credibility with detailed tech stacks
- Consistent styling with modern design trends

--- a/index.html
+++ b/index.html
@@ -310,6 +310,10 @@
                                                 <span>LangChain</span>
                                                 <span>TensorFlow</span>
                                                 <span>PyTorch</span>
+                                                <span>scikit-learn</span>
+                                                <span>OpenCV</span>
+                                                <span>BERT</span>
+                                                <span>CrewAI</span>
                                             </div>
                                         </div>
                                         <div class="tech-category cloud">
@@ -319,6 +323,10 @@
                                                 <span>SageMaker</span>
                                                 <span>Lambda</span>
                                                 <span>EC2</span>
+                                                <span>S3</span>
+                                                <span>CloudFormation</span>
+                                                <span>IAM</span>
+                                                <span>VPC</span>
                                             </div>
                                         </div>
                                         <div class="tech-category data">
@@ -328,6 +336,10 @@
                                                 <span>dbt</span>
                                                 <span>Airflow</span>
                                                 <span>Pinecone</span>
+                                                <span>Chroma</span>
+                                                <span>Vector DBs</span>
+                                                <span>ETL Pipelines</span>
+                                                <span>Data Warehousing</span>
                                             </div>
                                         </div>
                                         <div class="tech-category devops">
@@ -337,6 +349,10 @@
                                                 <span>Kubernetes</span>
                                                 <span>CI/CD</span>
                                                 <span>Monitoring</span>
+                                                <span>GitHub Actions</span>
+                                                <span>Jenkins</span>
+                                                <span>MLflow</span>
+                                                <span>Prometheus</span>
                                             </div>
                                         </div>
                                     </div>
@@ -374,6 +390,10 @@
                                                 <span>BERT</span>
                                                 <span>scikit-learn</span>
                                                 <span>SHAP</span>
+                                                <span>LIME</span>
+                                                <span>GANs</span>
+                                                <span>K-Means</span>
+                                                <span>DBSCAN</span>
                                             </div>
                                         </div>
                                         <div class="tech-category cloud">
@@ -383,6 +403,10 @@
                                                 <span>BigQuery ML</span>
                                                 <span>AutoML</span>
                                                 <span>Cloud Functions</span>
+                                                <span>Vertex AI</span>
+                                                <span>DataProc</span>
+                                                <span>Pub/Sub</span>
+                                                <span>Cloud Storage</span>
                                             </div>
                                         </div>
                                     </div>
@@ -419,15 +443,23 @@
                                                 <span>LightGBM</span>
                                                 <span>BERT</span>
                                                 <span>MLflow</span>
+                                                <span>LSTM</span>
+                                                <span>Pandas</span>
+                                                <span>NumPy</span>
+                                                <span>Anomaly Detection</span>
                                             </div>
                                         </div>
                                         <div class="tech-category web">
-                                            <span class="category-label">Web</span>
+                                            <span class="category-label">Web & Data</span>
                                             <div class="tech-tags">
                                                 <span>Flask</span>
                                                 <span>Power BI</span>
                                                 <span>REST APIs</span>
                                                 <span>Docker</span>
+                                                <span>Python Faker</span>
+                                                <span>Feature Engineering</span>
+                                                <span>Model Governance</span>
+                                                <span>Airflow</span>
                                             </div>
                                         </div>
                                     </div>
@@ -464,15 +496,23 @@
                                                 <span>Spring Boot</span>
                                                 <span>PostgreSQL</span>
                                                 <span>Kafka</span>
+                                                <span>RabbitMQ</span>
+                                                <span>Spring Security</span>
+                                                <span>OAuth2</span>
+                                                <span>SAML</span>
                                             </div>
                                         </div>
                                         <div class="tech-category cloud">
-                                            <span class="category-label">Cloud</span>
+                                            <span class="category-label">Cloud & DevOps</span>
                                             <div class="tech-tags">
                                                 <span>AWS</span>
                                                 <span>Kubernetes</span>
                                                 <span>ECS</span>
                                                 <span>Jenkins</span>
+                                                <span>Docker Compose</span>
+                                                <span>Blue/Green Deployment</span>
+                                                <span>ELK Stack</span>
+                                                <span>JUnit & Mockito</span>
                                             </div>
                                         </div>
                                     </div>
